
cc_library(
	name = "importsqlitelib",
	srcs = [
		"sqlite3.c",
	],
	hdrs = [
		"config.h",
		"include/sqlite3.h",
	],
	includes = [
		"include",
	],
	copts = [
		"-D_HAVE_SQLITE_CONFIG_H",	# the config file was set with a current linux + gcc compiler
		"-DBUILD_sqlite",
		"-DSQLITE_THREADSAFE=1",	# set to "serialized" threading mode
		"-DSQLITE_ENABLE_MATH_FUNCTIONS",
		"-DSQLITE_USE_URI",			# enables URI filenames
	],
	linkopts = [
		"-ldl",						# dlopen and friends
#		"-lm",
#		"-lpthread",
	],
	visibility = ["//visibility:public"],
)
